tests/NormalTests/paczka1/fuzzy1/26284850.err
Error in line 1: l6e7G A990 90,5
Error in line 11: bGwJT A977 29,0
Error in line 20: ofD4I A990 55,9
Error in line 18: JQf S710 61,9
